# yCpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  run  run.py  y_run_cpp.sh
app/: CMakeLists.txt  main.cpp
docs/: y_cpp.md
first_project/: main.cpp
project-x/: main.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  bench_y.cpp  test_y.cpp  y_core.cpp  y_libs.cc  y_libs.cpp
tests/bee/: bee.cpp
tests/bee_tests/: a.out  tests.cpp  to_file_append.txt  to_file_read.txt
tests/helpers/: bee_bench.hpp  bee_test.hpp
tests/input/: to_file_read.txt
your_cool_project/: CMakeLists.txt  main.cpp
